--- a/dnsmasq/dockerfile
+++ b/dnsmasq/dockerfile
@@ -1,5 +1,8 @@
 FROM debian:stable-slim
 
+RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/debian.sources
+RUN sed -i 's/security.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/debian.sources
+
 RUN apt-get update && apt-get install -y tzdata
 RUN ln -fs /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
